plugins {
  id 'net.ltgt.errorprone' apply false
}

group = 'net.sf.dz3'
version = '3.6.8-SNAPSHOT'

subprojects {

    repositories {

        jcenter()
        mavenLocal()
        mavenCentral()
    }

    apply plugin: 'java'
    apply plugin: 'java-library'

    sourceCompatibility = 11
    targetCompatibility = 11

    apply plugin: 'maven-publish'
    apply plugin: 'jacoco'
    jacoco {
        toolVersion = "0.8.5"
    }

    apply plugin: 'net.ltgt.errorprone'

    dependencies {

        implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.0'
        implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'

        testImplementation 'org.mockito:mockito-core:3.3.3'
        testImplementation 'junit:junit:4.13.1'

        errorprone 'com.google.errorprone:error_prone_core:2.6.0'
    }
}
